completed User and Role relationship